fix: white-borders & text-overflow

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
   max-width: 1280px;
-  background-color: #000;
+  background-color: inherit;
   margin: 0 auto;
   font-family: "Inter", "Arial", sans-serif;
 }
