--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -3,7 +3,6 @@
   margin: 0 auto;
   padding: 40px 0 50px 0;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   color: #fff;
 }
@@ -22,8 +21,11 @@
 }
 
 .profile__info {
+  max-width: 415px;
   flex-grow: 1;
   margin-left: 30px;
+  margin-right: auto;
+
 }
 
 .profile__info-container {
@@ -32,21 +34,26 @@
   margin-bottom: 16px;
 }
 
-.profile__title,
-.profile__hobby {
-  margin: 0;
-}
 
 .profile__title {
-
+  max-width: 373px;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
 }
 
 .profile__hobby {
+  max-width: 373px;
   font-size: 18px;
   line-height: 21.78px;
+}
+
+.profile__title,
+.profile__hobby {
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .profile__edit {
@@ -95,6 +102,7 @@
   }
 
   .profile__title {
+    max-width: 300px;
     font-size: 35px;
     line-height: 41px;
   }
@@ -105,6 +113,14 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .profile__info {
+    margin: auto;
+  }
+
+  .profile__info-container {
+    justify-content: space-between;
   }
 
   .profile__title {
@@ -119,23 +135,24 @@
 
   .profile__add {
     width: 100%;
-    height: 50px;
-    font-size: 38px;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    border: 2px solid #fff;
     margin-top: 20px;
   }
 }
 
 @media screen and (max-width: 400px) {
+  .profile__info-container {
+    max-width: 282px;
+    justify-content: center;
+  }
+
   .profile__title {
-    display: flex;
-    align-items: center;
+    max-width: 200px;
     margin-bottom: 16px;
     font-size: 22px;
     line-height: 26.63px;
-    font-weight: 500;
+  }
+
+  .profile__hobby {
+    max-width: 260px;
   }
 }
